hphp/hack/test/typecheck/fc_enum_cyclic_constraint_mutually.php
<?hh

enum E: int as F {}

enum F: int as E {}
